# ExerciseSuggestions

./: README.md  exercise_notebook_cot.ipynb  generate_prompts.py  notion_cal.csv  positive_examples.csv  pyproject.toml
